# xdialserver

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  build_dependencies.sh  cov_build.sh
.github/: CODEOWNERS
.github/workflows/: cmake.yml  fossid_integration_stateless_diffscan_target_repo.yml  native_full_build.yml
docs/: how_to_build_gssdp_1.0.md
entservices-testframework/patches/: 00010-R4.4-Add-support-for-project-dir.patch  1004-Add-support-for-project-dir.patch  RDKEMW-733-Add-ENTOS-IDS.patch
server/: CMakeLists.txt  README.md  gdial-app-registry.c  gdial-app.c  gdial-debug.h  gdial-impl-config.h  gdial-options.h  gdial-rest-builder.h  gdial-rest.c  gdial-rest.h  gdial-shield.c  gdial-shield.h  gdial-ssdp.c  gdial-ssdp.h  gdial-util.c  gdial-util.h  gdialserver_ut.cpp  gdialservice.cpp  main.c  main.c.orig  restartXdial_onAddressChange.sh  startXdial.sh
server/ci/: CMakeLists.txt  gdial-os-app.h  gdial-plat-app.c  gdial-plat-dev.c  gdial-plat.pc.in
server/ci/scripts/: int_test_additionalData.sh  int_test_appState.sh  int_test_env.sh  int_test_origin.sh  int_test_shield.sh  int_test_ssdp.sh  int_test_util.sh  startXdial.sh
server/include/: gdial-app.h  gdial-config.h  gdial-plat-app.h  gdial-plat-dev.h  gdial-plat-util.h  gdial-plat.h  gdial_app_registry.h  gdialservice.h  gdialservicecommon.h  gdialserviceimpl.h  gdialservicelogging.h
server/plat/: CMakeLists.txt  Module.cpp  Module.h  gdial-os-app.h  gdial-plat-app.c  gdial-plat-dev.c  gdial-plat-util.c  gdial-plat.pc.in  gdial.cpp  gdial.hpp  gdial_app_registry.c  gdialappcache.cpp  gdialappcache.hpp  gdialobjCacheHelper.hpp  rtRemoteObjectCache.hpp  rtabstractservice.cpp  rtabstractservice.hpp  rtcache.cpp  rtcache.hpp  rtcast.hpp  rtdial.cpp  rtdial.hpp
server/plat/scripts/: FinalFinger.py  restartXdial_onAddressChange.sh  startXdial.sh  xdial.service
stubs/: iarm_stubs.cpp
stubs/securityagent/: SecurityTokenUtil.cpp  SecurityTokenUtil.h
tests/: README.md
